syntax = "proto3";

package org.federation;

import "grpc/federation/federation.proto";
import "plugin/plugin.proto";

option go_package = "example/federation;federation";

service FederationService {
  option (grpc.federation.service) = {};
  rpc IsMatch(IsMatchRequest) returns (IsMatchResponse) {};
}

message IsMatchRequest {
  string expr = 1;
  string target = 2;
}
    
message IsMatchResponse {
  option (grpc.federation.message) = {
    def { name: "re" by: "example.regexp.compile($.expr)" }
    def { name: "matched" by: "re.matchString($.target)" }
  };
  bool result = 1 [(grpc.federation.field).by = "matched"];
}
